--- a/Resume.html
+++ b/Resume.html
@@ -20,6 +20,11 @@
             завданнями, планування - запорука успіху.</p>
             <p> Можу працювати над проектами як індивідуально, так і в команді, відповідально 
                 ставлюся до доручених завдань, легко навчаюсь, вмію розподіляти час між 
+                завданнями, планування - запорука успіху.</p><p> Можу працювати над проектами як індивідуально, так і в команді, відповідально 
+                    ставлюся до доручених завдань, легко навчаюсь, вмію розподіляти час між 
+                    завданнями, планування - запорука успіху.</p>
+            <p> Можу працювати над проектами як індивідуально, так і в команді, відповідально 
+                ставлюся до доручених завдань, легко навчаюсь, вмію розподіляти час між 
                 завданнями, планування - запорука успіху.</p>
                 <p> Можу працювати над проектами як індивідуально, так і в команді, відповідально 
                     ставлюся до доручених завдань, легко навчаюсь, вмію розподіляти час між 
