--- a/forms.html
+++ b/forms.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="/styles/styles5.css">
     <title>Form</title>
 </head>
 <body>
 <div class="form">
     <form method="get" action="bober.com">
-        <h1>Регистрація</h1>
+        <h1>Реєстрація</h1>
         <hr>
-        <p>Заповніть, будь ласка, форму для регистрації</p>
+        <p>Заповніть, будь ласка, форму для реєстрації</p>
 
         <label><b>Повне ім'я</b>
         <input class="position" type="text" placeholder="Введіть своє ім'я" name="name" required>
