--- a/forms.html
+++ b/forms.html
@@ -19,7 +19,7 @@
         </label>
 
         <label><b>Email</b>
-        <input class="position" type="text" placeholder="Введіть Email" name="email" required>
+        <input class="position" type="email" placeholder="Введіть Email" name="email" required>
         </label>
 
         <label><b>Пароль</b>
