--- a/forms.html
+++ b/forms.html
@@ -9,46 +9,46 @@
 </head>
 <body>
 <div class="form">
-    <form method="get" action="bober.com">
+    <form method="get" action="#">
         <h1>Реєстрація</h1>
         <hr>
 
         <label><b>Повне ім'я</b>
-        <input class="position" type="text" placeholder="Введіть своє ім'я" name="name" required>
+            <input class="position" type="text" placeholder="Введіть своє ім'я" name="name" required>
         </label>
 
         <label><b>Email</b>
-        <input class="position" type="email" placeholder="Введіть Email" name="email" required>
+            <input class="position" type="email" placeholder="Введіть Email" name="email" required>
         </label>
 
         <label><b>Пароль</b>
-        <input class="position" type="password" placeholder="Введіть пароль" name="psw" required>
+            <input class="position" type="password" placeholder="Введіть пароль" name="psw" required>
         </label>
 
         <label><b>Пітвердження пароля</b>
-        <input class="position" type="password" placeholder="Повторіть пароль" name="rp-psw">
+            <input class="position" type="password" placeholder="Повторіть пароль" name="rp-psw">
         </label>
 
         <label><b>Вік</b>
             <input class="position" type="text" placeholder="Ваш вік" name="age" required>
-            </label>
+        </label>
         
         <label><b>Стать</b>
-        <input type="radio" name="gender" value="male">Чоловік
-        <input type="radio" name="gender" value="female">Жінка
+            <input type="radio" name="gender" value="male" checked>Чоловік
+            <input type="radio" name="gender" value="female">Жінка
         </label>
 
         <label><b>Курс</b>
-        <select name="course">
-            <option value="1">Front-End</option>
-            <option value="2">Back-End</option>
-            <option value="3">Project Management</option>
-            <option value="4">QA Manual</option>
-        </select>
+            <select name="course">
+                <option value="1">Front-End</option>
+                <option value="2">Back-End</option>
+                <option value="3">Project Management</option>
+                <option value="4">QA Manual</option>
+            </select>
         </label>
 
         <label><b>Повна адреса проживання</b>
-        <textarea placeholder="Введіть свою адресу проживання" name="adress" cols="30" rows="10"></textarea>
+            <textarea placeholder="Введіть свою адресу проживання" name="adress" cols="30" rows="10"></textarea>
         </label>
 
         <label>
