--- a/figma.html
+++ b/figma.html
@@ -64,9 +64,9 @@
             </div>
             <div class="icons">       
                 <img src="images/Ps.png" alt="ps">
-                <img src="images/Ai.png" alt="ps">
-                <img src="images/Ae.png" alt="ps">
-                <img src="images/Figma.png" alt="ps">
+                <img src="images/Ai.png" alt="ai">
+                <img src="images/Ae.png" alt="ae">
+                <img src="images/Figma.png" alt="figma">
             </div>
             <div class="icon-text">
                 <p>Adobe Photoshop</p>
@@ -76,7 +76,7 @@
             </div>
             <div class="icon-stars">
                 <img src="images/star ps.png" alt="star-ps">
-                <img src="images/star ai .png" alt="star-ai">
+                <img src="images/star ai.png" alt="star-ai">
                 <img src="images/star ae.png" alt="star-ae">
                 <img src="images/star figma.png" alt="star-figma">
             </div>
