--- a/index.html
+++ b/index.html
@@ -5,76 +5,389 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="/styles/index.css">
-    <title>Form</title>
+    <title>Cards</title>
 </head>
 
 <body>
-    <header></header>
-    <main>
-        <div class="popup">
-            <form class="forma" method="get" action="#">
-                <h2>Create an Account</h2>
-                <div class="first-lastname">
-                    <div class="first-name-div">
-                        <label for="first-name">First Name</label>
-                        <input class="firstname-lastinput" type="text" id="first-name" required>
-                    </div>
-                    <div>
-                        <label for="last-name">Last Name</label>
-                        <input class="firstname-lastinput" type="text" id="last-name" required>
-                    </div>
-                </div>
 
-                <div class="email">
-                    <label for="email">E-mail</label>
-                    <input class="firstname-lastinput" type="email" id="email" required>
-                    <p>We'll never share your email with anyone else.</p>
-                </div>
-                <div class="mfale">
-                    <input class="custom-radio" id="male" type="radio">
-                    <label class="text-color" for="male">Male</label>
-                    <input class="custom-radio" id="female" type="radio">
-                    <label class="text-color" for="female">Female</label>
-                </div>
-                <div class="country-city">
-                    <div>
-                        <label for="country">Country</label>
-                        <select class="firstname-lastinput select" name="country" id="country">
-                            <option value="1">Select</option>
-                            <option value="1">Ukraine</option>
-                            <option value="2">Germany</option>
-                            <option value="3">Poland</option>
-                            <option value="4">America</option>
-                        </select>
-                    </div>
-                    <div>
-                        <label for="city">City</label>
-                        <input class="firstname-lastinput" type="text" id="city" required>
-                    </div>
-                </div>
-                <div>
-                    <button class="btn" type="submit">Sign up</button>
-                </div>
-                <div class="text">
-                    <p>By clicking the 'Sign Up' button, you confirm that you accept our <a class="color-a"
-                            href="#">Terms of Use</a>
-                        and <a class="color-a" href="#"> Privacy Policy.</a></p>
-                </div>
-                <div class="have-ac">
-                    <p>Have an account?</p>
-                    <a class="color-a" href="#">Log In</a>
-                </div>
-            </form>
+    <!-- Picka -->
+
+    <div class="card" style="--delay: 0;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
         </div>
-    </main>
-    <footer>
+        <div class="back">
+            <div class="suit spades">6 <br> &#9824;</div>
+            <div class="center">&#9824;</div>
+            <div class="value spades"> 6 <br> &#9824;</div>
+        </div>
+    </div>
 
-    </footer>
+    <div class="card" style="--delay: 0.25;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit spades">7 <br> &#9824;</div>
+            <div class="center">&#9824;</div>
+            <div class="value spades"> 7 <br> &#9824;</div>
+        </div>
+    </div>
+
+    <div class="card" style="--delay: 0.5;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit spades">8 <br> &#9824;</div>
+            <div class="center">&#9824;</div>
+            <div class="value spades"> 8 <br> &#9824;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit spades">9 <br> &#9824;</div>
+            <div class="center">&#9824;</div>
+            <div class="value spades"> 9 <br> &#9824;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0.25;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit spades">10 <br> &#9824;</div>
+            <div class="center">&#9824;</div>
+            <div class="value spades"> 10 <br> &#9824;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0.5;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit spades">В <br> &#9824;</div>
+            <div class="center">&#9824;</div>
+            <div class="value spades"> В <br> &#9824;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0.75;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit spades">Д <br> &#9824;</div>
+            <div class="center">&#9824;</div>
+            <div class="value spades"> Д <br> &#9824;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0.5;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit spades">К <br> &#9824;</div>
+            <div class="center">&#9824;</div>
+            <div class="value spades"> К <br> &#9824;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit spades">Т <br> &#9824;</div>
+            <div class="center">&#9824;</div>
+            <div class="value spades"> Т <br> &#9824;</div>
+        </div>
+    </div>
+
+    <!-- Cherva -->
+
+    <div class="card" style="--delay: 0.25;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit hearts">6 <br> &#9829;</div>
+            <div class="center hearts">&#9829;</div>
+            <div class="value hearts"> 6 <br> &#9829;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0.5;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit hearts">7 <br> &#9829;</div>
+            <div class="center hearts">&#9829;</div>
+            <div class="value hearts"> 7 <br> &#9829;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0.75;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit hearts">8 <br> &#9829;</div>
+            <div class="center hearts">&#9829;</div>
+            <div class="value hearts"> 8 <br> &#9829;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0.25;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit hearts">9 <br> &#9829;</div>
+            <div class="center hearts">&#9829;</div>
+            <div class="value hearts"> 9 <br> &#9829;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0.5;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit hearts">10 <br> &#9829;</div>
+            <div class="center hearts">&#9829;</div>
+            <div class="value hearts"> 10 <br> &#9829;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit hearts">В <br> &#9829;</div>
+            <div class="center hearts">&#9829;</div>
+            <div class="value hearts"> В <br> &#9829;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0.5;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit hearts">Д <br> &#9829;</div>
+            <div class="center hearts">&#9829;</div>
+            <div class="value hearts"> Д <br> &#9829;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0.25;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit hearts">К <br> &#9829;</div>
+            <div class="center hearts">&#9829;</div>
+            <div class="value hearts"> К <br> &#9829;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0.75;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit hearts">Т <br> &#9829;</div>
+            <div class="center hearts">&#9829;</div>
+            <div class="value hearts"> Т <br> &#9829;</div>
+        </div>
+    </div>
+
+    <!-- Bubna -->
+
+    <div class="card" style="--delay: 0.5;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit hearts">6 <br> &#9830;</div>
+            <div class="center hearts">&#9830;</div>
+            <div class="value hearts"> 6 <br> &#9830;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit hearts">7 <br> &#9830;</div>
+            <div class="center hearts">&#9830;</div>
+            <div class="value hearts"> 7 <br> &#9830;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0.25;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit hearts">8 <br> &#9830;</div>
+            <div class="center hearts">&#9830;</div>
+            <div class="value hearts"> 8 <br> &#9830;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0.75;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit hearts">9 <br> &#9830;</div>
+            <div class="center hearts">&#9830;</div>
+            <div class="value hearts"> 9 <br> &#9830;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0.5;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit hearts">10 <br> &#9830;</div>
+            <div class="center hearts">&#9830;</div>
+            <div class="value hearts"> 10 <br> &#9830;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit hearts">В <br> &#9830;</div>
+            <div class="center hearts">&#9830;</div>
+            <div class="value hearts"> В <br> &#9830;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0.75;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit hearts">Д <br> &#9830;</div>
+            <div class="center hearts">&#9830;</div>
+            <div class="value hearts"> Д <br> &#9830;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0.25;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit hearts">К <br> &#9830;</div>
+            <div class="center hearts">&#9830;</div>
+            <div class="value hearts"> К <br> &#9830;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit hearts">Т <br> &#9830;</div>
+            <div class="center hearts">&#9830;</div>
+            <div class="value hearts"> Т <br> &#9830;</div>
+        </div>
+    </div>
+
+    <!-- Chresta -->
+
+    <div class="card" style="--delay: 0.5;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit spades">6 <br> &#9827;</div>
+            <div class="center">&#9827;</div>
+            <div class="value spades"> 6 <br> &#9827;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0.25;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit spades">7 <br> &#9827;</div>
+            <div class="center">&#9827;</div>
+            <div class="value spades"> 7 <br> &#9827;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0.75;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit spades">8 <br> &#9827;</div>
+            <div class="center">&#9827;</div>
+            <div class="value spades"> 8 <br> &#9827;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0.5;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit spades">9 <br> &#9827;</div>
+            <div class="center">&#9827;</div>
+            <div class="value spades"> 9 <br> &#9827;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit spades">10 <br> &#9827;</div>
+            <div class="center">&#9827;</div>
+            <div class="value spades"> 10 <br> &#9827;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0.25;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit spades">В <br> &#9827;</div>
+            <div class="center">&#9827;</div>
+            <div class="value spades"> В <br> &#9827;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0.5;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit spades">Д <br> &#9827;</div>
+            <div class="center">&#9827;</div>
+            <div class="value spades"> Д <br> &#9827;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit spades">К <br> &#9827;</div>
+            <div class="center">&#9827;</div>
+            <div class="value spades"> <br> &#9827;</div>
+        </div>
+    </div>
+    <div class="card" style="--delay: 0.75;">
+        <div class="front">
+            <img src="/images/c8124f959fd6c5123d861f7a4fb995c2.jpg" alt="frontcard">
+        </div>
+        <div class="back">
+            <div class="suit spades">Т <br> &#9827;</div>
+            <div class="center">&#9827;</div>
+            <div class="value spades"> Т <br> &#9827;</div>
+        </div>
+    </div>
+
+
+
+
 </body>
 
 </html>
